[gd_scene load_steps=10 format=3 uid="uid://cchft1x3hle41"]

[ext_resource type="Script" uid="uid://llrbojt5iu2n" path="res://scenes/map_editor/map_editor.gd" id="1_p4a8s"]
[ext_resource type="Theme" uid="uid://bypc4xue8puse" path="res://visual/ui/theme.tres" id="2_14mad"]
[ext_resource type="Script" uid="uid://fcfudinv23xd" path="res://prefabs/vector3_input/vector3_input.gd" id="2_to4ta"]
[ext_resource type="Script" uid="uid://bk64ye3w242x" path="res://prefabs/vector2_input/vector2_input.gd" id="4_bgvkf"]
[ext_resource type="PackedScene" uid="uid://yn5es25x807f" path="res://scenes/map_loader/map_loader.tscn" id="5_j473l"]

[sub_resource type="Gradient" id="Gradient_vba5k"]
offsets = PackedFloat32Array(0.6, 0.61)
colors = PackedColorArray(0, 0, 0, 0.196078, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j473l"]
gradient = SubResource("Gradient_vba5k")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bgvkf"]
no_depth_test = true
shading_mode = 0

[sub_resource type="SphereMesh" id="SphereMesh_l06n5"]
material = SubResource("StandardMaterial3D_bgvkf")
radius = 0.125
height = 0.25

[node name="MapEditor" type="Node3D"]
script = ExtResource("1_p4a8s")

[node name="Container" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_14mad")
dragger_visibility = 1

[node name="Divider" type="VSplitContainer" parent="Container"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
dragger_visibility = 1

[node name="NodeListPanel" type="Panel" parent="Container/Divider"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2

[node name="FlexBox" type="VBoxContainer" parent="Container/Divider/NodeListPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Container/Divider/NodeListPanel/FlexBox"]
layout_mode = 2
text = "Nodes"
horizontal_alignment = 1

[node name="NodesList" type="ItemList" parent="Container/Divider/NodeListPanel/FlexBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewNodeButton" type="Button" parent="Container/Divider/NodeListPanel/FlexBox"]
layout_mode = 2
text = "New node"

[node name="NodeParametersPanel" type="Panel" parent="Container/Divider"]
visible = false
custom_minimum_size = Vector2(0, 256)
layout_mode = 2

[node name="ScrollBox" type="ScrollContainer" parent="Container/Divider/NodeParametersPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlexBox" type="VBoxContainer" parent="Container/Divider/NodeParametersPanel/ScrollBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BasicDataContainer" type="VBoxContainer" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
layout_mode = 2
text = "Name:"

[node name="Name" type="LineEdit" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TypeLabel" type="Label" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
layout_mode = 2
text = "Type:"

[node name="Type" type="OptionButton" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PositionLabel" type="Label" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
layout_mode = 2
text = "Position:"

[node name="Position" type="HFlowContainer" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
script = ExtResource("2_to4ta")
max_value = Vector3(10, 10, 10)
min_value = Vector3(-10, -10, -10)
metadata/_custom_type_script = "uid://fcfudinv23xd"

[node name="RotationLabel" type="Label" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
layout_mode = 2
text = "Rotation:"

[node name="Rotation" type="HFlowContainer" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
script = ExtResource("2_to4ta")
max_value = Vector3(360, 360, 360)
min_value = Vector3(-360, -360, -360)
metadata/_custom_type_script = "uid://fcfudinv23xd"

[node name="BlockadeDataContainer" type="VBoxContainer" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox"]
layout_mode = 2

[node name="ActivatorLabel" type="Label" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BlockadeDataContainer"]
layout_mode = 2
text = "Activator:"

[node name="Activator" type="LineEdit" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BlockadeDataContainer"]
layout_mode = 2

[node name="WallDataContainer" type="VBoxContainer" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox"]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/WallDataContainer"]
layout_mode = 2
text = "Size:"

[node name="Size" type="HFlowContainer" parent="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/WallDataContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("4_bgvkf")
value = Vector2(1, 1)
max_value = Vector2(20, 20)
min_value = Vector2(1, 1)
metadata/_custom_type_script = "uid://bk64ye3w242x"

[node name="Window" type="Control" parent="Container"]
layout_mode = 2

[node name="FlexBox" type="HFlowContainer" parent="Container/Window"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="Back" type="Button" parent="Container/Window/FlexBox"]
layout_mode = 2
text = "Back"

[node name="Save" type="Button" parent="Container/Window/FlexBox"]
layout_mode = 2
text = "Export"

[node name="DragRegion" type="TextureRect" parent="Container/Window"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0
texture = SubResource("GradientTexture2D_j473l")

[node name="NodeContainer" type="Node3D" parent="."]

[node name="FileDialog" type="FileDialog" parent="."]
root_subfolder = "maps"
filters = PackedStringArray("*.json")

[node name="Selector" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.87931, 10.1897)
mesh = SubResource("SphereMesh_l06n5")

[node name="MapLoader" parent="." instance=ExtResource("5_j473l")]

[connection signal="item_selected" from="Container/Divider/NodeListPanel/FlexBox/NodesList" to="." method="_select_node"]
[connection signal="button_up" from="Container/Divider/NodeListPanel/FlexBox/NewNodeButton" to="." method="_create_node"]
[connection signal="text_submitted" from="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer/Name" to="." method="_update_name"]
[connection signal="item_selected" from="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer/Type" to="." method="_update_type"]
[connection signal="vector_changed" from="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer/Position" to="." method="_update_node_position"]
[connection signal="vector_changed" from="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BasicDataContainer/Rotation" to="." method="_update_node_rotation"]
[connection signal="text_submitted" from="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/BlockadeDataContainer/Activator" to="." method="_update_activator_name"]
[connection signal="vector_changed" from="Container/Divider/NodeParametersPanel/ScrollBox/FlexBox/WallDataContainer/Size" to="." method="_update_size"]
[connection signal="button_up" from="Container/Window/FlexBox/Back" to="." method="_back"]
[connection signal="button_up" from="Container/Window/FlexBox/Save" to="." method="_open_save_dialog"]
[connection signal="file_selected" from="FileDialog" to="." method="_save"]
